--- a/Florish website Front-end/style.css
+++ b/Florish website Front-end/style.css
@@ -178,36 +178,36 @@ input{
 	}
 }
  
-/* // media query for text on cover of image start */
-
+/* // media query for text on the cover of image start */
+ 
 @media screen and (max-width: 768px) {
 	.content p{
-	  font-size: 16px; /* Adjust font size for mobile screens */
+	  font-size: 18px; /* Adjust font size for mobile screens */
 	    
 	}
 	.content h2{
-		font-size: 32px;
+		font-size: 35px;
 	}
 	.content span{
-		font-size: 23px;
+		font-size: 25px;
 	}
-	.content{
-		position: absolute;
-  	left: 108px;
-  	top: 410px;
-	}
+	 .content{
+		position: relative;
+		left: 45px;
+	 }
+	 
   }
   @media screen and (max-width: 450px) {
    
 	.content h2 {
-		font-size: 30px;
+		font-size: 33px;
 	  }
 	  .content span {
-		font-size: 20px;
+		font-size: 24px;
 		 
 	  }
 	  .content p{
-		font-size: 16px; /* Adjust font size for mobile screens */
+		font-size: 18px; /* Adjust font size for mobile screens */
 		  
 	  }
 	  .bg-img{
